--- a/nba.html
+++ b/nba.html
@@ -143,140 +143,98 @@
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-1">
-         Denver Nuggets vs Detroit Pistons
+         Denver Nuggets vs New York Knicks
         </a>
        </td>
        <td>
-        February 03, 2026 4:00 PM
+        February 04, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 04, 2026 4:00 PM:00" data-start="February 03, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="February 05, 2026 4:00 PM:00" data-start="February 04, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-2">
-         Utah Jazz vs Indiana Pacers
+         Minnesota Timberwolves vs Toronto Raptors
         </a>
        </td>
        <td>
-        February 03, 2026 4:00 PM
+        February 04, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 04, 2026 4:00 PM:00" data-start="February 03, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="February 05, 2026 4:30 PM:00" data-start="February 04, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-3">
-         New York Knicks vs Washington Wizards
+         Boston Celtics vs Houston Rockets
         </a>
        </td>
        <td>
-        February 03, 2026 4:00 PM
+        February 04, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 04, 2026 4:00 PM:00" data-start="February 03, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="February 05, 2026 5:00 PM:00" data-start="February 04, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-4">
-         Los Angeles Lakers vs Brooklyn Nets
+         New Orleans Pelicans vs Milwaukee Bucks
         </a>
        </td>
        <td>
-        February 03, 2026 4:30 PM
+        February 04, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 04, 2026 4:30 PM:00" data-start="February 03, 2026 4:30 PM:00">
+        <span class="countdown-timer" data-end="February 05, 2026 5:00 PM:00" data-start="February 04, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-5">
-         Atlanta Hawks vs Miami Heat
+         Oklahoma City Thunder vs San Antonio Spurs
         </a>
        </td>
        <td>
-        February 03, 2026 4:30 PM
+        February 04, 2026 6:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 04, 2026 4:30 PM:00" data-start="February 03, 2026 4:30 PM:00">
+        <span class="countdown-timer" data-end="February 05, 2026 6:30 PM:00" data-start="February 04, 2026 6:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-6">
-         Boston Celtics vs Dallas Mavericks
+         Memphis Grizzlies vs Sacramento Kings
         </a>
        </td>
        <td>
-        February 03, 2026 5:00 PM
+        February 04, 2026 7:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 04, 2026 5:00 PM:00" data-start="February 03, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="February 05, 2026 7:00 PM:00" data-start="February 04, 2026 7:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-7">
-         Chicago Bulls vs Milwaukee Bucks
+         Cleveland Cavaliers vs Los Angeles Clippers
         </a>
        </td>
        <td>
-        February 03, 2026 5:00 PM
+        February 04, 2026 7:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 04, 2026 5:00 PM:00" data-start="February 03, 2026 5:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.info/nba-streams-8">
-         Orlando Magic vs Oklahoma City Thunder
-        </a>
-       </td>
-       <td>
-        February 03, 2026 5:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="February 04, 2026 5:00 PM:00" data-start="February 03, 2026 5:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.info/nba-streams-9">
-         Philadelphia 76ers vs Golden State Warriors
-        </a>
-       </td>
-       <td>
-        February 03, 2026 7:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="February 04, 2026 7:00 PM:00" data-start="February 03, 2026 7:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.info/nba-streams-10">
-         Phoenix Suns vs Portland Trail Blazers
-        </a>
-       </td>
-       <td>
-        February 03, 2026 8:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="February 04, 2026 8:00 PM:00" data-start="February 03, 2026 8:00 PM:00">
+        <span class="countdown-timer" data-end="February 05, 2026 7:30 PM:00" data-start="February 04, 2026 7:30 PM:00">
         </span>
        </td>
       </tr>
