--- a/nhl.html
+++ b/nhl.html
@@ -96,39 +96,54 @@
 </thead>
 <tbody>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-1">Columbus Blue Jackets vs New Jersey Devils</a></td>
-            <td>February 03, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-04 16:00:00" data-start="2026-02-03 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-1">Boston Bruins vs Florida Panthers</a></td>
+            <td>February 04, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-05 16:00:00" data-start="2026-02-04 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-2">Washington Capitals vs Philadelphia Flyers</a></td>
-            <td>February 03, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-04 16:00:00" data-start="2026-02-03 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-2">Chicago Blackhawks vs Columbus Blue Jackets</a></td>
+            <td>February 04, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-05 16:00:00" data-start="2026-02-04 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-3">Ottawa Senators vs Carolina Hurricanes</a></td>
-            <td>February 03, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-04 16:00:00" data-start="2026-02-03 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-3">Montreal Canadiens vs Winnipeg Jets</a></td>
+            <td>February 04, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-05 16:00:00" data-start="2026-02-04 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-4">Buffalo Sabres vs Tampa Bay Lightning</a></td>
-            <td>February 03, 2026 04:30 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-04 16:30:00" data-start="2026-02-03 16:30:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-4">Minnesota Wild vs Nashville Predators</a></td>
+            <td>February 04, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-05 17:00:00" data-start="2026-02-04 17:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-5">Pittsburgh Penguins vs New York Islanders</a></td>
-            <td>February 03, 2026 04:30 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-04 16:30:00" data-start="2026-02-03 16:30:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-5">San Jose Sharks vs Colorado Avalanche</a></td>
+            <td>February 04, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-05 18:00:00" data-start="2026-02-04 18:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-6">Toronto Maple Leafs vs Edmonton Oilers</a></td>
-            <td>February 03, 2026 05:30 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-04 17:30:00" data-start="2026-02-03 17:30:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-6">Detroit Red Wings vs Utah Mammoth</a></td>
+            <td>February 04, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-05 18:00:00" data-start="2026-02-04 18:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-7">Seattle Kraken vs Anaheim Ducks</a></td>
-            <td>February 03, 2026 07:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-04 19:00:00" data-start="2026-02-03 19:00:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-7">St. Louis Blues vs Dallas Stars</a></td>
+            <td>February 04, 2026 06:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-05 18:30:00" data-start="2026-02-04 18:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-8">Edmonton Oilers vs Calgary Flames</a></td>
+            <td>February 04, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-05 19:00:00" data-start="2026-02-04 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-9">Vancouver Canucks vs Vegas Golden Knights</a></td>
+            <td>February 04, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-05 19:00:00" data-start="2026-02-04 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-10">Seattle Kraken vs Los Angeles Kings</a></td>
+            <td>February 04, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-05 19:00:00" data-start="2026-02-04 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
