--- a/soccer.html
+++ b/soccer.html
@@ -98,59 +98,79 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Bologna vs Milan</a></td>
-<td>February 3, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 04, 2026 11:45:00 AM" data-start="February 03, 2026 11:45:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Toulouse vs Amiens SC</a></td>
+<td>February 3, 2026 11:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 11:30:00 AM" data-start="February 03, 2026 11:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Sheffield United vs Oxford United</a></td>
-<td>February 3, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 04, 2026 11:45:00 AM" data-start="February 03, 2026 11:45:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Nice vs Montpellier</a></td>
+<td>February 3, 2026 11:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 11:30:00 AM" data-start="February 03, 2026 11:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Portsmouth vs Ipswich Town</a></td>
-<td>February 3, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 04, 2026 11:45:00 AM" data-start="February 03, 2026 11:45:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Lyon vs Laval</a></td>
+<td>February 3, 2026 11:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 11:30:00 AM" data-start="February 03, 2026 11:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Albacete vs Barcelona</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Aberdeen vs Celtic</a></td>
 <td>February 3, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 04, 2026 12:00:00 PM" data-start="February 03, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Arsenal vs Chelsea</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Troyes vs Lens</a></td>
 <td>February 3, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 04, 2026 12:00:00 PM" data-start="February 03, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">St. Mirren vs Hearts</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Deportivo Alavés vs Real Sociedad</a></td>
 <td>February 3, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 04, 2026 12:00:00 PM" data-start="February 03, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Marseille vs Rennes</a></td>
-<td>February 3, 2026 12:10 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 04, 2026 12:10:00 PM" data-start="February 03, 2026 12:10:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Valencia vs Athletic Club</a></td>
+<td>February 3, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 12:00:00 PM" data-start="February 03, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Forge vs Tigres UANL</a></td>
-<td>February 3, 2026 16:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 04, 2026 04:00:00 PM" data-start="February 03, 2026 04:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Inter Milan vs Torino</a></td>
+<td>February 3, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 12:00:00 PM" data-start="February 03, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">The Strongest vs Deportivo Tachira</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-10">Manchester City vs Newcastle United</a></td>
+<td>February 3, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 12:00:00 PM" data-start="February 03, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Flamengo vs Internacional</a></td>
+<td>February 3, 2026 14:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 02:00:00 PM" data-start="February 03, 2026 02:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-11">Santos vs Sao Paulo</a></td>
+<td>February 3, 2026 15:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 03:00:00 PM" data-start="February 03, 2026 03:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-12">Palmeiras vs Vitoria</a></td>
 <td>February 3, 2026 16:30 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 04, 2026 04:30:00 PM" data-start="February 03, 2026 04:30:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Olimpia vs América</a></td>
-<td>February 3, 2026 18:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 04, 2026 06:00:00 PM" data-start="February 03, 2026 06:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-13">Botafogo vs Gremio</a></td>
+<td>February 3, 2026 16:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 04:30:00 PM" data-start="February 03, 2026 04:30:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">San Diego vs Pumas UNAM</a></td>
-<td>February 3, 2026 20:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 04, 2026 08:00:00 PM" data-start="February 03, 2026 08:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-14">Xelajú vs Monterrey</a></td>
+<td>February 3, 2026 17:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 05:00:00 PM" data-start="February 03, 2026 05:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-14">Vancouver FC vs Cruz Azul</a></td>
+<td>February 3, 2026 19:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 04, 2026 07:00:00 PM" data-start="February 03, 2026 07:00:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
