--- a/index.html
+++ b/index.html
@@ -183,12 +183,17 @@
 <tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-5">Carabao Cup</a></td>
-<td>February 3, 2026 12:00 PM</td>
+<td>February 4, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 04, 2026 12:00:00 PM" data-start="February 03, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Coppa Italia</a></td>
+<td>February 4, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="February 04, 2026 12:00:00 PM" data-start="February 03, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-4">Copa del Rey</a></td>
-<td>February 3, 2026 12:00 PM</td>
+<td>February 4, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="February 04, 2026 12:00:00 PM" data-start="February 03, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
@@ -197,8 +202,8 @@
 <td><span class="countdown-timer" data-end="February 04, 2026 04:00:00 PM" data-start="February 03, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">CONCACAF</a></td>
-<td>February 3, 2026 4:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-14">CONCACAF</a></td>
+<td>February 3, 2026 5:00 PM</td>
 <td><span class="countdown-timer" data-end="February 04, 2026 04:00:00 PM" data-start="February 03, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
@@ -207,8 +212,8 @@
 <td><span class="countdown-timer" data-end="February 04, 2026 05:00:00 PM" data-start="February 03, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/wwe-streams">WWE NXT</a></td>
-<td>February 3, 2026 5:00 PM</td>
+<td><a href="https://roxiestreams.info/aew">AEW</a></td>
+<td>February 4, 2026 5:00 PM</td>
 <td><span class="countdown-timer" data-end="February 04, 2026 05:00:00 PM" data-start="February 03, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
