--- a/index.html
+++ b/index.html
@@ -182,17 +182,17 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Carabao Cup</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-10">Carabao Cup</a></td>
 <td>February 4, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="February 05, 2026 12:00:00 PM" data-start="February 04, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Coppa Italia</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Coppa Italia</a></td>
 <td>February 4, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="February 05, 2026 12:00:00 PM" data-start="February 04, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Copa del Rey</a></td>
+<td><a href="https://roxiestreams.info/soccer">Copa del Rey</a></td>
 <td>February 4, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="February 05, 2026 12:00:00 PM" data-start="February 04, 2026 12:00:00 PM"></span></td>
 </tr>
