--- a/motorsports.html
+++ b/motorsports.html
@@ -97,14 +97,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/supercross">AMA Supercross Houston (Qualifying)</a></td>
-<td>January 31, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 13:00:00" data-start="January 31, 2026 10:00:00"></span>
-</td>
-<tr>
-<td><a href="https://roxiestreams.info/supercross">AMA Supercross Houston  (Race)</a></td>
-<td>January 31, 2026 16:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 13:00:00" data-start="January 31, 2026 16:00:00"></span>
+<td><a href="https://roxiestreams.info/nascar">NASCAR Cook Out</a></td>
+<td>February 04, 2026 15:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 13:00:00" data-start="February 04, 2026 15:00:00"></span>
 </td>
 <tr>
 </tbody>
