--- a/soccer.html
+++ b/soccer.html
@@ -98,79 +98,39 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Toulouse vs Amiens SC</a></td>
-<td>February 4, 2026 11:30 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Strasbourg vs Monaco</a></td>
+<td>February 4, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 05, 2026 11:30:00 AM" data-start="February 04, 2026 11:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Nice vs Montpellier</a></td>
-<td>February 4, 2026 11:30 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Real Betis vs Atletico Madrid</a></td>
+<td>February 4, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 05, 2026 11:30:00 AM" data-start="February 04, 2026 11:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Lyon vs Laval</a></td>
-<td>February 4, 2026 11:30 AM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Atalanta vs Juventus</a></td>
+<td>February 4, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 05, 2026 11:30:00 AM" data-start="February 04, 2026 11:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Aberdeen vs Celtic</a></td>
-<td>February 4, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Sporting CP vs AVS</a></td>
+<td>February 4, 2026 12:45 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 05, 2026 12:00:00 PM" data-start="February 04, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Troyes vs Lens</a></td>
-<td>February 4, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 05, 2026 12:00:00 PM" data-start="February 04, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Deportivo Alavés vs Real Sociedad</a></td>
-<td>February 4, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 05, 2026 12:00:00 PM" data-start="February 04, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Valencia vs Athletic Club</a></td>
-<td>February 4, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 05, 2026 12:00:00 PM" data-start="February 04, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Inter Milan vs Torino</a></td>
-<td>February 4, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 05, 2026 12:00:00 PM" data-start="February 04, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-10">Manchester City vs Newcastle United</a></td>
-<td>February 4, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 05, 2026 12:00:00 PM" data-start="February 04, 2026 12:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Flamengo vs Internacional</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Bahia vs Fluminense</a></td>
 <td>February 4, 2026 14:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 05, 2026 02:00:00 PM" data-start="February 04, 2026 02:00:00 PM" span=""></span></td>
+<td><span <="" class="countdown-timer" data-end="February 05, 2026 12:00:00 PM" data-start="February 04, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-11">Santos vs Sao Paulo</a></td>
-<td>February 4, 2026 15:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 05, 2026 03:00:00 PM" data-start="February 04, 2026 03:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-12">Palmeiras vs Vitoria</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Cruzeiro vs Coritiba</a></td>
 <td>February 4, 2026 16:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 05, 2026 04:30:00 PM" data-start="February 04, 2026 04:30:00 PM" span=""></span></td>
+<td><span <="" class="countdown-timer" data-end="February 05, 2026 12:00:00 PM" data-start="February 04, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-13">Botafogo vs Gremio</a></td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Juventud vs Universidad Católica</a></td>
 <td>February 4, 2026 16:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 05, 2026 04:30:00 PM" data-start="February 04, 2026 04:30:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-14">Xelajú vs Monterrey</a></td>
-<td>February 4, 2026 17:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 05, 2026 05:00:00 PM" data-start="February 04, 2026 05:00:00 PM" span=""></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-14">Vancouver FC vs Cruz Azul</a></td>
-<td>February 4, 2026 19:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 05, 2026 07:00:00 PM" data-start="February 04, 2026 07:00:00 PM" span=""></span></td>
+<td><span <="" class="countdown-timer" data-end="February 05, 2026 12:00:00 PM" data-start="February 04, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
