--- a/nhl.html
+++ b/nhl.html
@@ -144,6 +144,44 @@
             <td><a href="https://roxiestreams.info/nhl-streams-10">Seattle Kraken vs Los Angeles Kings</a></td>
             <td>February 04, 2026 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-02-05 19:00:00" data-start="2026-02-04 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Thursday, February 05, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-1">Pittsburgh Penguins vs Buffalo Sabres</a></td>
+            <td>February 05, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-06 16:00:00" data-start="2026-02-05 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-2">New York Islanders vs New Jersey Devils</a></td>
+            <td>February 05, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-06 16:00:00" data-start="2026-02-05 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-3">Carolina Hurricanes vs New York Rangers</a></td>
+            <td>February 05, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-06 16:00:00" data-start="2026-02-05 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-4">Ottawa Senators vs Philadelphia Flyers</a></td>
+            <td>February 05, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-06 16:00:00" data-start="2026-02-05 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-5">Nashville Predators vs Washington Capitals</a></td>
+            <td>February 05, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-06 16:00:00" data-start="2026-02-05 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-6">Florida Panthers vs Tampa Bay Lightning</a></td>
+            <td>February 05, 2026 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-06 16:30:00" data-start="2026-02-05 16:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-7">Los Angeles Kings vs Vegas Golden Knights</a></td>
+            <td>February 05, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-02-06 19:00:00" data-start="2026-02-05 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
