--- a/nba.html
+++ b/nba.html
@@ -143,98 +143,112 @@
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-1">
-         Denver Nuggets vs New York Knicks
+         Washington Wizards vs Detroit Pistons
         </a>
        </td>
        <td>
-        February 04, 2026 4:00 PM
+        February 05, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 05, 2026 4:00 PM:00" data-start="February 04, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="February 06, 2026 4:00 PM:00" data-start="February 05, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-2">
-         Minnesota Timberwolves vs Toronto Raptors
+         Brooklyn Nets vs Orlando Magic
         </a>
        </td>
        <td>
-        February 04, 2026 4:30 PM
+        February 05, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 05, 2026 4:30 PM:00" data-start="February 04, 2026 4:30 PM:00">
+        <span class="countdown-timer" data-end="February 06, 2026 4:00 PM:00" data-start="February 05, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-3">
-         Boston Celtics vs Houston Rockets
+         Utah Jazz vs Atlanta Hawks
         </a>
        </td>
        <td>
-        February 04, 2026 5:00 PM
+        February 05, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 05, 2026 5:00 PM:00" data-start="February 04, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="February 06, 2026 4:30 PM:00" data-start="February 05, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-4">
-         New Orleans Pelicans vs Milwaukee Bucks
+         Chicago Bulls vs Toronto Raptors
         </a>
        </td>
        <td>
-        February 04, 2026 5:00 PM
+        February 05, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 05, 2026 5:00 PM:00" data-start="February 04, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="February 06, 2026 4:30 PM:00" data-start="February 05, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-5">
-         Oklahoma City Thunder vs San Antonio Spurs
+         Charlotte Hornets vs Houston Rockets
         </a>
        </td>
        <td>
-        February 04, 2026 6:30 PM
+        February 05, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 05, 2026 6:30 PM:00" data-start="February 04, 2026 6:30 PM:00">
+        <span class="countdown-timer" data-end="February 06, 2026 5:00 PM:00" data-start="February 05, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-6">
-         Memphis Grizzlies vs Sacramento Kings
+         San Antonio Spurs vs Dallas Mavericks
         </a>
        </td>
        <td>
-        February 04, 2026 7:00 PM
+        February 05, 2026 5:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 05, 2026 7:00 PM:00" data-start="February 04, 2026 7:00 PM:00">
+        <span class="countdown-timer" data-end="February 06, 2026 5:30 PM:00" data-start="February 05, 2026 5:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-7">
-         Cleveland Cavaliers vs Los Angeles Clippers
+         Golden State Warriors vs Phoenix Suns
         </a>
        </td>
        <td>
-        February 04, 2026 7:30 PM
+        February 05, 2026 7:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 05, 2026 7:30 PM:00" data-start="February 04, 2026 7:30 PM:00">
+        <span class="countdown-timer" data-end="February 06, 2026 7:00 PM:00" data-start="February 05, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-8">
+         Philadelphia 76ers vs Los Angeles Lakers
+        </a>
+       </td>
+       <td>
+        February 05, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 06, 2026 7:00 PM:00" data-start="February 05, 2026 7:00 PM:00">
         </span>
        </td>
       </tr>
