--- a/index.html
+++ b/index.html
@@ -182,39 +182,19 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-10">Carabao Cup</a></td>
-<td>February 4, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="February 05, 2026 12:00:00 PM" data-start="February 04, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Coppa Italia</a></td>
-<td>February 4, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="February 05, 2026 12:00:00 PM" data-start="February 04, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.info/darts">Premier League Darts</a></td>
+<td>February 5, 2026 11:00 AM</td>
+<td><span class="countdown-timer" data-end="February 06, 2026 11:00:00 AM" data-start="February 05, 2026 11:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer">Copa del Rey</a></td>
-<td>February 4, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="February 05, 2026 12:00:00 PM" data-start="February 04, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/nascar">NASCAR</a></td>
-<td>February 4, 2026 3:10 PM</td>
-<td><span class="countdown-timer" data-end="February 05, 2026 05:00:00 PM" data-start="February 04, 2026 03:10:00 PM"></span></td>
+<td>February 5, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 06, 2026 12:00:00 PM" data-start="February 05, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/nba">NBA</a></td>
-<td>February 4, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="February 05, 2026 04:00:00 PM" data-start="February 04, 2026 04:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/soccer-streams-14">CONCACAF</a></td>
-<td>February 4, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="February 05, 2026 05:00:00 PM" data-start="February 04, 2026 05:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.info/aew">AEW</a></td>
-<td>February 4, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="February 05, 2026 05:00:00 PM" data-start="February 04, 2026 05:00:00 PM"></span></td>
+<td>February 5, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="February 06, 2026 04:00:00 PM" data-start="February 05, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
