--- a/nfl.html
+++ b/nfl.html
@@ -98,9 +98,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/nfl-streams-1">Pro Bowl Games 2026</a></td>
-<td>February 3, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 3, 2026 17:00:00"></span></td>
+<td><a href="https://roxiestreams.info/nfl-streams-1">NFL Honors</a></td>
+<td>February 5, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 5, 2026 17:00:00"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/nfl-streams-1">Seattle Seahawks vs New England Patriots</a></td>
