--- a/index.html
+++ b/index.html
@@ -197,6 +197,11 @@
 <td><span class="countdown-timer" data-end="February 06, 2026 04:00:00 PM" data-start="February 05, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
+<td><a href="https://roxiestreams.info/nfl-streams-1">NFL Honors</a></td>
+<td>February 5, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="February 06, 2026 04:00:00 PM" data-start="February 05, 2026 05:00:00 PM"></span></td>
+</tr>
+<tr>
 </tr></tr></tbody>
 </table>
 </div>
