--- a/nfl-streams-1.html
+++ b/nfl-streams-1.html
@@ -103,7 +103,7 @@
 	<div class="streamchanger">
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nflalt.m3u8', '601'))">Sky Sports</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nfl.m3u8', '601'))">NFL Network</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nbc.m3u8', '601'))">NBC</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nflalty.m3u8', '601'))">NBC</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
