--- a/nba.html
+++ b/nba.html
@@ -254,6 +254,110 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for February 06, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-1">
+         Miami Heat vs Boston Celtics
+        </a>
+       </td>
+       <td>
+        February 06, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 07, 2026 4:30 PM:00" data-start="February 06, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-2">
+         New York Knicks vs Detroit Pistons
+        </a>
+       </td>
+       <td>
+        February 06, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 07, 2026 4:30 PM:00" data-start="February 06, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-3">
+         Indiana Pacers vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        February 06, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 07, 2026 5:00 PM:00" data-start="February 06, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-4">
+         New Orleans Pelicans vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        February 06, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 07, 2026 5:00 PM:00" data-start="February 06, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-5">
+         Memphis Grizzlies vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        February 06, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 07, 2026 7:00 PM:00" data-start="February 06, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-6">
+         Los Angeles Clippers vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        February 06, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 07, 2026 7:00 PM:00" data-start="February 06, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
