--- a/soccer.html
+++ b/soccer.html
@@ -98,39 +98,69 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-1">Strasbourg vs Monaco</a></td>
-<td>February 5, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 06, 2026 12:00:00 PM" data-start="February 05, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Al Nassr vs AL Ittihad</a></td>
+<td>February 6, 2026 09:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 09:30:00 AM" data-start="February 06, 2026 09:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Real Betis vs Atletico Madrid</a></td>
-<td>February 5, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 06, 2026 12:00:00 PM" data-start="February 05, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Union Berlin vs Frankfurt</a></td>
+<td>February 6, 2026 11:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 11:30:00 AM" data-start="February 06, 2026 11:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Atalanta vs Juventus</a></td>
-<td>February 5, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 06, 2026 12:00:00 PM" data-start="February 05, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Metz vs Lille</a></td>
+<td>February 6, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 11:45:00 AM" data-start="February 06, 2026 11:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Sporting CP vs AVS</a></td>
-<td>February 5, 2026 12:45 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 06, 2026 12:45:00 PM" data-start="February 05, 2026 12:45:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Verona vs Pisa</a></td>
+<td>February 6, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 11:45:00 AM" data-start="February 06, 2026 11:45:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Bahia vs Fluminense</a></td>
-<td>February 5, 2026 14:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 06, 2026 02:00:00 PM" data-start="February 05, 2026 02:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Leeds United vs Nottingham Forest</a></td>
+<td>February 6, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Cruzeiro vs Coritiba</a></td>
-<td>February 5, 2026 16:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 06, 2026 04:30:00 PM" data-start="February 05, 2026 04:30:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Celta De Vigo vs Osasuna</a></td>
+<td>February 6, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Juventud vs Universidad Católica</a></td>
-<td>February 5, 2026 16:30 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 06, 2026 04:30:00 PM" data-start="February 05, 2026 04:30:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Charlton Athletic vs Queens Park Rangers</a></td>
+<td>February 6, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Caxias vs Ypiranga Erechim</a></td>
+<td>February 6, 2026 15:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 03:30:00 PM" data-start="February 06, 2026 03:30:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Caxias vs Ypiranga Erechim</a></td>
+<td>February 6, 2026 15:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 03:30:00 PM" data-start="February 06, 2026 03:30:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Necaxa vs Atlético San Luis</a></td>
+<td>February 6, 2026 17:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 05:00:00 PM" data-start="February 06, 2026 05:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-10">Tigres UANL vs Santos Laguna</a></td>
+<td>February 6, 2026 17:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 05:00:00 PM" data-start="February 06, 2026 05:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Tijuana vs Puebla</a></td>
+<td>February 6, 2026 19:06 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 07:06:00 PM" data-start="February 06, 2026 07:06:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-12">Mazatlán vs Chivas</a></td>
+<td>February 6, 2026 19:06 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 07:06:00 PM" data-start="February 06, 2026 07:06:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
