--- a/soccer.html
+++ b/soccer.html
@@ -123,6 +123,11 @@
 <td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
 </tr>
 <tr>
+<td><a href="https://roxiestreams.info/soccer-streams-13">Airdrieonians vs St Mirren </a></td>
+<td>February 6, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.info/soccer-streams-6">Celta De Vigo vs Osasuna</a></td>
 <td>February 6, 2026 12:00 PM</td>
 <td><span <="" class="countdown-timer" data-end="February 07, 2026 12:00:00 PM" data-start="February 06, 2026 12:00:00 PM" span=""></span></td>
